parser/src/snapshots/rustpython_parser__function__tests__function_kw_only_args.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                name: Identifier(
                    "f",
                ),
                args: Arguments {
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [
                        Arg {
                            arg: Identifier(
                                "a",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 9..10,
                        },
                        Arg {
                            arg: Identifier(
                                "b",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 12..13,
                        },
                        Arg {
                            arg: Identifier(
                                "c",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 15..16,
                        },
                    ],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                    range: PhantomData<ruff_text_size::range::TextRange>,
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 19..23,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                range: 0..23,
            },
        ),
    ],
)
