parser/src/snapshots/rustpython_parser__function__tests__function_kw_only_args_with_defaults.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                name: Identifier(
                    "f",
                ),
                args: Arguments {
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [
                        Arg {
                            arg: Identifier(
                                "a",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 9..10,
                        },
                        Arg {
                            arg: Identifier(
                                "b",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 12..13,
                        },
                        Arg {
                            arg: Identifier(
                                "c",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 18..19,
                        },
                    ],
                    kw_defaults: [
                        Constant(
                            ExprConstant {
                                value: Int(
                                    20,
                                ),
                                kind: None,
                                range: 14..16,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                value: Int(
                                    30,
                                ),
                                kind: None,
                                range: 20..22,
                            },
                        ),
                    ],
                    kwarg: None,
                    defaults: [],
                    range: PhantomData<ruff_text_size::range::TextRange>,
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 25..29,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                range: 0..29,
            },
        ),
    ],
)
