parser/src/snapshots/rustpython_parser__function__tests__function_no_args.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Attributed {
            custom: (),
            node: FunctionDef(
                StmtFunctionDef {
                    name: Identifier(
                        "f",
                    ),
                    args: Arguments {
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [],
                        range: 5..7,
                    },
                    body: [
                        Attributed {
                            custom: (),
                            node: Pass(
                                StmtPass {
                                    range: 9..13,
                                },
                            ),
                        },
                    ],
                    decorator_list: [],
                    returns: None,
                    type_comment: None,
                    range: 0..13,
                },
            ),
        },
    ],
)
