parser/src/snapshots/rustpython_parser__function__tests__function_pos_and_kw_only_args.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                name: Identifier(
                    "f",
                ),
                args: Arguments {
                    posonlyargs: [],
                    args: [
                        Arg {
                            arg: Identifier(
                                "a",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 6..7,
                        },
                        Arg {
                            arg: Identifier(
                                "b",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 9..10,
                        },
                        Arg {
                            arg: Identifier(
                                "c",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 12..13,
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [
                        Arg {
                            arg: Identifier(
                                "d",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 18..19,
                        },
                        Arg {
                            arg: Identifier(
                                "e",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 21..22,
                        },
                        Arg {
                            arg: Identifier(
                                "f",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 24..25,
                        },
                    ],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                    range: PhantomData<ruff_text_size::range::TextRange>,
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 28..32,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                range: 0..32,
            },
        ),
    ],
)
