parser/src/snapshots/rustpython_parser__function__tests__function_pos_and_kw_only_args_with_defaults_and_varargs.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                name: Identifier(
                    "f",
                ),
                args: Arguments {
                    posonlyargs: [],
                    args: [
                        Arg {
                            arg: Identifier(
                                "a",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 6..7,
                        },
                        Arg {
                            arg: Identifier(
                                "b",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 9..10,
                        },
                        Arg {
                            arg: Identifier(
                                "c",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 12..13,
                        },
                    ],
                    vararg: Some(
                        Arg {
                            arg: Identifier(
                                "args",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 16..20,
                        },
                    ),
                    kwonlyargs: [
                        Arg {
                            arg: Identifier(
                                "d",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 22..23,
                        },
                        Arg {
                            arg: Identifier(
                                "e",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 25..26,
                        },
                        Arg {
                            arg: Identifier(
                                "f",
                            ),
                            annotation: None,
                            type_comment: None,
                            range: 31..32,
                        },
                    ],
                    kw_defaults: [
                        Constant(
                            ExprConstant {
                                value: Int(
                                    20,
                                ),
                                kind: None,
                                range: 27..29,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                value: Int(
                                    30,
                                ),
                                kind: None,
                                range: 33..35,
                            },
                        ),
                    ],
                    kwarg: None,
                    defaults: [],
                    range: (),
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 38..42,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                range: 0..42,
            },
        ),
    ],
)
