parser/src/snapshots/rustpython_parser__function__tests__function_pos_args_with_defaults.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..26,
                name: Identifier(
                    "f",
                ),
                args: FunctionArguments {
                    range: 6..19,
                    posonlyargs: [],
                    args: [
                        ArgWithDefault {
                            range: 6..7,
                            def: Arg {
                                range: 6..7,
                                arg: Identifier(
                                    "a",
                                ),
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                        ArgWithDefault {
                            range: 9..10,
                            def: Arg {
                                range: 9..10,
                                arg: Identifier(
                                    "b",
                                ),
                                annotation: None,
                                type_comment: None,
                            },
                            default: Some(
                                Constant(
                                    ExprConstant {
                                        range: 11..13,
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ),
                        },
                        ArgWithDefault {
                            range: 15..16,
                            def: Arg {
                                range: 15..16,
                                arg: Identifier(
                                    "c",
                                ),
                                annotation: None,
                                type_comment: None,
                            },
                            default: Some(
                                Constant(
                                    ExprConstant {
                                        range: 17..19,
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ),
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [],
                    kwarg: None,
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 22..26,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        ),
    ],
)
