parser/src/snapshots/rustpython_parser__function__tests__lambda_kw_only_args_with_defaults.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                value: Lambda(
                    ExprLambda {
                        args: Arguments {
                            posonlyargs: [],
                            args: [],
                            vararg: None,
                            kwonlyargs: [
                                Arg {
                                    arg: Identifier(
                                        "a",
                                    ),
                                    annotation: None,
                                    type_comment: None,
                                    range: 10..11,
                                },
                                Arg {
                                    arg: Identifier(
                                        "b",
                                    ),
                                    annotation: None,
                                    type_comment: None,
                                    range: 13..14,
                                },
                                Arg {
                                    arg: Identifier(
                                        "c",
                                    ),
                                    annotation: None,
                                    type_comment: None,
                                    range: 19..20,
                                },
                            ],
                            kw_defaults: [
                                Constant(
                                    ExprConstant {
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                        range: 15..17,
                                    },
                                ),
                                Constant(
                                    ExprConstant {
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                        range: 21..23,
                                    },
                                ),
                            ],
                            kwarg: None,
                            defaults: [],
                            range: (),
                        },
                        body: Constant(
                            ExprConstant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                                range: 25..26,
                            },
                        ),
                        range: 0..26,
                    },
                ),
                range: 0..26,
            },
        ),
    ],
)
