parser/src/snapshots/rustpython_parser__function__tests__lambda_no_args.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Expr(
            StmtExpr {
                value: Lambda(
                    ExprLambda {
                        args: Arguments {
                            posonlyargs: [],
                            args: [],
                            vararg: None,
                            kwonlyargs: [],
                            kw_defaults: [],
                            kwarg: None,
                            defaults: [],
                            range: PhantomData<ruff_text_size::range::TextRange>,
                        },
                        body: Constant(
                            ExprConstant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                                range: 8..9,
                            },
                        ),
                        range: 0..9,
                    },
                ),
                range: 0..9,
            },
        ),
    ],
)
